<resources>
    <string name="app_name">Anila JMP-A</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="proyek_2">PROYEK 2</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan">SIMPAN</string>
    <string name="halaman_logout">LOGOUT</string>
</resources>